<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/cartFragmentItem"
        android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        />

    <item
        android:id="@+id/transactionFragmentItem"
        android:title="@string/transaction"
        android:icon="@drawable/baseline_attach_money_24"
        />

    <item
        android:id="@+id/inventoryFragmentItem"
        android:title="@string/inventory"
        android:icon="@drawable/baseline_warehouse_24"
        />

    <item
        android:id="@+id/customersFragmentItem"
        android:title="@string/customers"
        android:icon="@drawable/baseline_people_24"
        />

    <item
        android:id="@+id/groupFragmentItem"
        android:title="@string/group"
        android:icon="@drawable/baseline_groups_3_24"
        />

</menu>