<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_home_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:layout_marginBottom="5dp"
                            android:textStyle="bold"
                            android:textSize="24sp"
                            android:text="@string/promo_hari_ini">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:text="@string/bebas_ongkir_amp_bebas_pilih_jadwal">
                        </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <Button
                    android:id="@+id/goToPromoBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lihat_semua"
                    android:textSize="14sp"
                    android:textColor="@color/primary_green"
                    android:textStyle="bold"
                    android:background="?android:attr/selectableItemBackground"
                    tools:ignore="SmallSp">
                </Button>
            </LinearLayout>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="3dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_promo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/produk_kami"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="24sp">
        </TextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:cardElevation="4dp"
            app:cardCornerRadius="3dp"
            tools:ignore="NestedWeights">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>
